opa-gatekeeper/containerlimits/k8scontainerlimits-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerLimits
metadata:
  name: require-resource-limits
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
      - apiGroups: ["argoproj.io"]
        kinds: ["Rollout"]
